added category doc
